--- a/resources/resume.css
+++ b/resources/resume.css
@@ -87,16 +87,8 @@
     border: 3px solid #00ED64;
   }
   
-  .circle-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 0;
-    overflow: hidden;
-  }
   
+
   .circle {
     position: absolute;
     border-radius: 50%;
@@ -104,7 +96,9 @@
     width: 500px;
     border: 1px solid #00ED64;
     z-index: -1;
+    box-sizing: border-box;
   }
+  
   
   #circle1 {
     top: 90%;
@@ -338,14 +332,18 @@
 @media (max-width: 550.9px) {
     .vertical-menu {
         display: flex;
+        width: 100%;
     }
 
     .vertical-menu a {
         margin: 0;
-        padding-right: 2px;
-        padding-left: 2px;
+        padding-right: 3px;
+        padding-left: 3px;
         border-right: #000000 0.5px solid;
         font-size: 10px;
+        padding-top: 9px;
+        padding-bottom: 9px;
+
     }
 
     .card-btn{
@@ -367,3 +365,17 @@
         overflow-y: hidden;
     }
   }
+
+
+#special {
+overflow-x: hidden;
+position: relative;
+}
+
+@media (min-width: 992px) {
+#special {
+    overflow-x: hidden;
+    overflow-y: hidden;
+
+}
+}
